--- a/website/hugo.toml
+++ b/website/hugo.toml
@@ -1,4 +1,4 @@
 baseURL = 'https://example.org/'
 languageCode = 'en-us'
 title = 'Hugo TailwindCSS Starter'
-theme = 'starter-theme'
+theme = 'base-theme'
